[gd_scene format=3 uid="uid://c280qqcd8o0j2"]

[ext_resource type="Script" uid="uid://dlvwtqnbdtiqi" path="res://Tape Dispenser/tape_dispenser.gd" id="1_rb1y6"]

[node name="TapeDispenser" type="Node3D" unique_id=100595719]
script = ExtResource("1_rb1y6")

[node name="TapeLocation" type="Marker3D" parent="." unique_id=1778593674]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0.6468096, 0, -0.012956381)

[node name="Timer" type="Timer" parent="." unique_id=1685211061]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
